--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -12,6 +12,9 @@
         FallbackResource disabled
     </Directory>
 
+    # allow auth header for symfony's JWT bundle
+    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
+
     ErrorLog /var/log/apache2/project_error.log
     CustomLog /var/log/apache2/project_access.log combined
 </VirtualHost>
