--- a/php/xdebug.ini
+++ b/php/xdebug.ini
@@ -1,6 +1,10 @@
-zend_extension = /usr/lib/php/20180731/xdebug.so
-xdebug.remote_port = 9000
+zend_extension = /usr/local/lib/php/extensions/no-debug-non-zts-20190902/xdebug.so
+
 xdebug.remote_enable = 1
-xdebug.remote_connect_back = 1
-xdebug.remote_log = /var/www/project/var/log/xdebug
-xdebug.html_errors = 0
+xdebug.remote_connect_back = 0
+xdebug.remote_host = host.docker.internal
+xdebug.remote_port = 9000
+xdebug.remote_handler = dbgp
+xdebug.remote_mode = req
+xdebug.remote_autostart = 0
+xdebug.idekey = PHPSTORM
