--- a/apache/000-default.conf
+++ b/apache/000-default.conf
@@ -1,19 +1,19 @@
 <VirtualHost *:80>
     DocumentRoot /var/www/project/public
     <Directory /var/www/project/public>
-        AllowOverride None
+        AllowOverride All
         Order Allow,Deny
         Allow from All
 
         FallbackResource /index.php
+
+        # allow auth header for symfony's JWT bundle
+        SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
     </Directory>
 
     <Directory /var/www/project/public/bundles>
         FallbackResource disabled
     </Directory>
-
-    # allow auth header for symfony's JWT bundle
-    SetEnvIf Authorization "(.*)" HTTP_AUTHORIZATION=$1
 
     ErrorLog /var/log/apache2/project_error.log
     CustomLog /var/log/apache2/project_access.log combined
